# real-time-ml

./: README.md
docker_compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
services/topic_to_feature_store/: Dockerfile  Makefile  historical.prod.env  live.prod.env  pyproject.toml
services/topic_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Makefile  dev.env  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  prod.env  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  main.py
services/trade_producer/src/trade_data_source/: __init__.py  base.py  kraken_rest_api.py  kraken_websocket_api.py
services/trade_to_ohlc/: Dockerfile  Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
